--- a/force-app/main/default/classes/ParticipantEnrollmentTriggerHandler.cls
+++ b/force-app/main/default/classes/ParticipantEnrollmentTriggerHandler.cls
@@ -217,7 +217,7 @@ public without sharing class ParticipantEnrollmentTriggerHandler {
     private static void sendCalloutOnEligibilityPassed(List<Participant_Enrollment__c> newList, Map<Id, Participant_Enrollment__c> oldMap){
         String acceptedStatus = PEStatusState.PE_STATUS_ELIGIBILITY_PASSED;
         for(Participant_Enrollment__c pe : newList){
-            if(oldMap == null && pe.Participant_Status__c == acceptedStatus &&
+            if(oldMap != null && pe.Participant_Status__c == acceptedStatus &&
                     oldMap.get(pe.Id).Participant_Status__c != acceptedStatus){
                 IntegrationService.sendPEToStudyHubAsync(pe.Id);
             }
