--- a/force-app/main/default/classes/MyReferringClinicsController.cls
+++ b/force-app/main/default/classes/MyReferringClinicsController.cls
@@ -24,7 +24,7 @@ public without sharing class MyReferringClinicsController {
                     trialIds, new List<String>{HCPEnrollmentService.HCP_S_INVITATION_SENT}
             ), userMode);
             clinicDetail.studySitesForInvitation = new List<MyReferringClinicsController.SiteWrapper>();
-            if(!studySitesNotDelegate.isEmpty()){
+            if(studySitesNotDelegate != null && !studySitesNotDelegate.isEmpty()){
                 Set<Id> studyIds = new Set<Id>();
                 for(Study_Site__c site: studySitesNotDelegate){
                     if(!studyIds.contains(site.Clinical_Trial_Profile__c) && StudySiteService.STATUS_GROUP_ACCEPTED.contains(site.Override_PI_Referral_Status__c)){
